# nerf-studio

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CreateSceneModal.tsx  Layout.tsx
frontend/src/pages/: RenderPage.tsx  SceneDetailPage.tsx  ScenesPage.tsx
migrations/: 20260413000001_initial.sql
src/: lib.rs  main.rs
src/api/: export.rs  health.rs  images.rs  mod.rs  render.rs  scenes.rs
src/models/: export.rs  image.rs  mod.rs  render.rs  scene.rs
src/nerf/: camera.rs  engine.rs  mod.rs  volume.rs
src/utils/: image.rs  math.rs  mod.rs
